<resources>
    <string name="app_name">Quiz</string>
    <string name="activity_answers">Answers</string>

    <string name="heading"><u>Android Quiz</u></string>
    <string name="desc">Each question has a score of <b>one</b> point</string>
    <string name="ans">Your answer</string>
    <string name="your_name">Enter your name</string>


    <!--Questions headers-->
    <string name="one">Question 1</string>
    <string name="two">Question 2</string>
    <string name="three">Question 3</string>
    <string name="four">Question 4</string>
    <string name="five">Question 5</string>
    <string name="six">Question 6</string>
    <string name="seven">Question 7</string>
    <string name="eight">Question 8</string>
    <string name="nine">Question 9</string>
    <string name="ten">Question 10</string>

    <!--The question one-->
    <string name="question1"> What is Android?</string>
    <string name="q_a">Android is a stack of softwares for mobility</string>
    <string name="q_b">Google mobile device name</string>
    <string name="q_c">Virtual Machine</string>
    <string name="q_d">None of the above</string>

    <!--The question two-->
    <string name="question2">How to kill an activity in Android?</string>
    <string name="q2_a">finish()</string>
    <string name="q2_b">kill()</string>
    <string name="q2_c">finishActivity(int requestCode)</string>
    <string name="q2_d">stop()</string>


    <!--The question three-->
    <string name="question3">Who is the founder of Google?</string>

    <!--The question four-->
    <string name="question4">What are the layouts available in Android?</string>
    <string name="q4_a">Linear layout</string>
    <string name="q4_b">Relative layouts</string>
    <string name="q4_c">None </string>
    <string name="q4_d">All the above</string>


    <!--The question five-->
    <string name="question5">Is it possible to have one activity without UI in android?</string>
    <string name="q5_a">Yes</string>
    <string name="q5_b">No</string>


    <!--The question six-->
    <string name="question6">Which of the following directories are found in res folder in Android?</string>
    <string name="q6_a">drawable</string>
    <string name="q6_b">photos</string>
    <string name="q6_c">values</string>
    <string name="q6_d">layout</string>


    <!--The question seven-->
    <string name="question7">The root element of AndroidManifest.xml is__________</string>

    <!--The question eight-->
    <string name="question8">The first smartphone to run on Android platform was?</string>
    <string name="q8_a">HTC Dream</string>
    <string name="q8_b">Motorolla</string>
    <string name="q8_c">Nexus </string>
    <string name="q8_d">Samsung</string>

    <!--The question nine-->
    <string name="question9">We can pass Data between activities using__________</string>

    <!--The question ten-->
    <string name="question10">What is AIDL in Android?</string>
    <string name="q10_a">Android Interface Design Language</string>
    <string name="q10_b">Android Interface Definition Language</string>

    <!--Button-->
    <string name="btn">Submit answer</string>
    <string name="rst">Retry</string>
    <string name="get_answer">Answers</string>
    <string name="back">Back</string>


    <string name="must_answer">You must provide your name first before answering</string>

    <string name="sure_answer">Are you sure you want to submit?</string>

    <string name="must_name">You must provide your name first</string>

    <string name="answer_all">Please answer all the questions!</string>

    <string name="submit_answers_first">You should submit your answers first!</string>

    <string name="expected_answers">These are the expected answers!</string>

    <string name="try_answering_again">Give it another try, this can be your chance!</string>

    <string name="continue_answering">Okay, Continue answering</string>

    <!--Answers-->

    <string name="answer_qn3">Larry Page</string><!--answer of question 3-->

    <string name="answer_qn7">Manifest</string><!--answer of question 7-->

    <string name="answer_qn9">Intents</string><!--answer of question 9-->

</resources>
