<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bg">

    <LinearLayout

        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        tools:context="com.mcdennylucaz.quiz.MainActivity">

        <LinearLayout

            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/margin_small"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/heading"
                android:textAllCaps="true"
                android:textColor="@color/text_color"
                android:textSize="@dimen/text_size_large"
                android:textStyle="bold" />

            <ImageView
                android:layout_width="@dimen/textview_width"
                android:layout_height="@dimen/textview_width"
                android:layout_gravity="center_horizontal"
                android:src="@drawable/exam_maker" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/margin_small"
                android:gravity="center_horizontal"
                android:text="@string/desc"
                android:textStyle="italic" />

            <!--Start of question 1-->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/margin_medium"
                android:background="@drawable/question_bg"
                android:orientation="vertical">

                <TextView
                    style="@style/HeaderTextStyle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="sans-serif-condensed"
                    android:text="@string/one" />

                <TextView
                    style="@style/Questions"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/question1" />

                <RadioGroup
                    android:id="@+id/question1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <RadioButton
                        android:id="@+id/qn1_1"
                        style="@style/Answers"
                        android:text="@string/q_a"
                        android:checked="true"/>

                    <RadioButton
                        android:id="@+id/qn1_2"
                        style="@style/Answers"
                        android:text="@string/q_b" />

                    <RadioButton
                        android:id="@+id/qn1_3"
                        style="@style/Answers"
                        android:text="@string/q_c" />

                    <RadioButton
                        android:id="@+id/qn1_4"
                        style="@style/Answers"
                        android:text="@string/q_d" />
                </RadioGroup>


            </LinearLayout>


            <!--Start of question 2-->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/margin_medium"
                android:background="@drawable/question_bg"
                android:orientation="vertical">

                <TextView
                    style="@style/HeaderTextStyle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="sans-serif-condensed"
                    android:text="@string/two" />

                <TextView
                    style="@style/Questions"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/question2" />

                <RadioGroup
                    android:id="@+id/question2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <RadioButton
                        android:id="@+id/qn2_1"
                        style="@style/Answers"
                        android:text="@string/q2_a"
                        android:checked="true"/>

                    <RadioButton
                        android:id="@+id/qn2_2"
                        style="@style/Answers"
                        android:text="@string/q2_b" />

                    <RadioButton
                        android:id="@+id/qn2_3"
                        style="@style/Answers"
                        android:text="@string/q2_c" />

                    <RadioButton
                        android:id="@+id/qn2_4"
                        style="@style/Answers"
                        android:text="@string/q2_d" />
                </RadioGroup>

            </LinearLayout><!--End of question 2-->

            <!--Start of question 3-->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/margin_medium"
                android:background="@drawable/question_bg"
                android:orientation="vertical">

                <TextView
                    style="@style/HeaderTextStyle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="sans-serif-condensed"
                    android:text="@string/three" />

                <TextView
                    style="@style/Questions"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/question3" />

                <EditText
                    android:id="@+id/question3"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/answer_qn3"
                    android:imeOptions="actionDone"
                    android:inputType="textCapWords" />

            </LinearLayout><!--end of question 3-->

            <!--Start of question 4-->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/margin_medium"
                android:background="@drawable/question_bg"
                android:orientation="vertical">

                <TextView
                    style="@style/HeaderTextStyle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="sans-serif-condensed"
                    android:text="@string/four" />

                <TextView
                    style="@style/Questions"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/question4" />

                <CheckBox
                    android:id="@+id/qn4_1"
                    style="@style/Answers"
                    android:text="@string/q4_a"
                    android:checked="true"/>

                <CheckBox
                    android:id="@+id/qn4_2"
                    style="@style/Answers"
                    android:text="@string/q4_b"
                    android:checked="true"/>

                <CheckBox
                    android:id="@+id/qn4_3"
                    style="@style/Answers"
                    android:text="@string/q4_c" />

                <CheckBox
                    android:id="@+id/qn4_4"
                    style="@style/Answers"
                    android:text="@string/q4_d" />

            </LinearLayout><!--End of question 4-->

            <!--Start of question 5-->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/margin_medium"
                android:background="@drawable/question_bg"
                android:orientation="vertical">

                <TextView
                    style="@style/HeaderTextStyle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="sans-serif-condensed"
                    android:text="@string/five" />

                <TextView
                    style="@style/Questions"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/question5" />

                <RadioGroup
                    android:id="@+id/question5"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <RadioButton
                        android:id="@+id/qn5_1"
                        style="@style/Answers"
                        android:text="@string/q5_a"
                        android:checked="true"/>

                    <RadioButton
                        android:id="@+id/qn5_2"
                        style="@style/Answers"
                        android:text="@string/q5_b" />

                </RadioGroup>


            </LinearLayout><!--End of question 5-->

            <!--Start of question 6-->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/margin_medium"
                android:background="@drawable/question_bg"
                android:orientation="vertical">

                <TextView
                    style="@style/HeaderTextStyle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="sans-serif-condensed"
                    android:text="@string/six" />

                <TextView
                    style="@style/Questions"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/question6" />

                <CheckBox
                    android:id="@+id/qn6_1"
                    style="@style/Answers"
                    android:text="@string/q6_a"
                    android:checked="true"/>

                <CheckBox
                    android:id="@+id/qn6_2"
                    style="@style/Answers"
                    android:text="@string/q6_b" />

                <CheckBox
                    android:id="@+id/qn6_3"
                    style="@style/Answers"
                    android:text="@string/q6_c"
                    android:checked="true"/>

                <CheckBox
                    android:id="@+id/qn6_4"
                    style="@style/Answers"
                    android:text="@string/q6_d"
                    android:checked="true"/>

            </LinearLayout><!--End of question 6-->

            <!--Start of question 7-->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/margin_medium"
                android:background="@drawable/question_bg"
                android:orientation="vertical">

                <TextView
                    style="@style/HeaderTextStyle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="sans-serif-condensed"
                    android:text="@string/seven" />

                <TextView
                    style="@style/Questions"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/question7" />

                <EditText
                    android:id="@+id/question7"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/answer_qn7"
                    android:imeOptions="actionDone"
                    android:inputType="textCapWords" />

            </LinearLayout><!--End of question 7-->

            <!--Start of question 8-->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/margin_medium"
                android:background="@drawable/question_bg"
                android:orientation="vertical">

                <TextView
                    style="@style/HeaderTextStyle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="sans-serif-condensed"
                    android:text="@string/eight" />

                <TextView
                    style="@style/Questions"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/question8" />

                <RadioGroup
                    android:id="@+id/question_8"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <RadioButton
                        android:id="@+id/qn8_1"
                        style="@style/Answers"
                        android:text="@string/q8_a"
                        android:checked="true"/>

                    <RadioButton
                        android:id="@+id/qn8_2"
                        style="@style/Answers"
                        android:text="@string/q8_b" />

                    <RadioButton
                        android:id="@+id/qn8_3"
                        style="@style/Answers"
                        android:text="@string/q8_c" />

                    <RadioButton
                        android:id="@+id/qn8_4"
                        style="@style/Answers"
                        android:text="@string/q8_d" />
                </RadioGroup>

            </LinearLayout><!--End of question 8-->

            <!--Start of question 9-->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/margin_medium"
                android:background="@drawable/question_bg"
                android:orientation="vertical">

                <TextView
                    style="@style/HeaderTextStyle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="sans-serif-condensed"
                    android:text="@string/nine" />

                <TextView
                    style="@style/Questions"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/question9" />

                <EditText
                    android:id="@+id/question9"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/answer_qn9"
                    android:imeOptions="actionDone"
                    android:inputType="textCapWords" />


            </LinearLayout><!--End of question 9-->

            <!--Start of question 10-->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/margin_medium"
                android:background="@drawable/question_bg"
                android:orientation="vertical">

                <TextView
                    style="@style/HeaderTextStyle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="sans-serif-condensed"
                    android:text="@string/ten" />

                <TextView
                    style="@style/Questions"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/question10" />

                <RadioGroup
                    android:id="@+id/question10"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <RadioButton
                        android:id="@+id/qn10_1"
                        style="@style/Answers"
                        android:text="@string/q10_a" />

                    <RadioButton
                        android:id="@+id/qn10_2"
                        style="@style/Answers"
                        android:text="@string/q10_b"
                        android:checked="true"/>

                </RadioGroup>


            </LinearLayout><!--End of question 10-->

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <!--Back button-->
            <Button
                android:id="@+id/reset_questions"
                style="@style/SubmitButons"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:onClick="getBack"
                android:text="@string/back" />

        </LinearLayout>
    </LinearLayout>
</ScrollView>